bidrag-sjablon kalles direkte i stedet for å gå via bidrag-gcp-proxy